Various changes & fixes incl. adding features and animations
- added backlink (toggled by specifying "backlink=true" in the query)
- fix for issue where the cards in second stage were sometimes in the wrong order
- new animations for stage transitions and reset
- added drop shadows to all cards
- improved 'out of box' style for card back
- flipped order of action buttons
- changed text of action button on last transition to say 'show all'

--- a/_theme.scss
+++ b/_theme.scss
@@ -1,8 +1,8 @@
 $card-border-radius: 20px;
 
-$card-back-color: saddlebrown;
-$card-back-border-width: 2px;
-$card-back-border-color: brown;
+$card-back-color: #9c5d31;
+$card-back-border-width: 3px;
+$card-back-border-color: black;
 
 $card-grid-margin-bottom:200px;
 
